# asd

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/agents/: systemverilog-formatter.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
asd/: __init__.py  __main__.py  cli.py
asd/core/: __init__.py  config.py  library.py  library_config.py  loader.py  repository.py
asd/generators/: __init__.py  toml_gen.py
asd/sims/: __init__.py  axis.py
asd/simulators/: __init__.py  base.py  cocotb_utils.py  runner.py  verilator.py
asd/tools/: __init__.py  lint.py  vivado.py  vivado_tcl.py
asd/utils/: __init__.py  config_validation.py  expression.py  logging.py  sources.py  validation.py  verilog_parser.py
tests/: __init__.py  test_config.py  test_library.py  test_repository.py  test_verilog_parser.py
