[tool.poetry]
name = "asd"
version = "0.1.0"
description = "Automated System Design - TOML-based build system for HDL projects"
authors = ["Danilo Šijačić <danilo.sijacic@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/asd"
homepage = "https://github.com/yourusername/asd"
documentation = "https://github.com/yourusername/asd#readme"
keywords = ["hdl", "verilog", "systemverilog", "verilator", "eda", "build-tool"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
packages = [{include = "asd"}]
include = ["README.md", "LICENSE", "examples/*.sv"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
click = ">=8.1.0"
pydantic = ">=2.5.0"
tomli = ">=2.0.0"
tomli-w = ">=1.0.0"
jinja2 = ">=3.1.0"
rich = ">=13.0.0"
cocotb = ">=1.8.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
mypy = ">=1.0.0"
ruff = ">=0.1.0"
black = ">=23.0.0"

[tool.poetry.scripts]
asd = "asd.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
# To run with coverage: pytest --cov=asd --cov-report=term-missing --cov-report=html