[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 100
target-version = ['py312', 'py313']

[tool.isort]
known_first_party = ["asd"]
line_length = 100
profile = "black"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
python_version = "3.12"
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.poetry]
authors = ["Danilo Šijačić <danilo.sijacic@gmail.com>"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Environment :: Console"
]
description = "Automated System Design - TOML-based build system for HDL projects"
documentation = "https://github.com/yourusername/asd#readme"
homepage = "https://github.com/yourusername/asd"
include = ["README.md", "LICENSE", "examples/*.sv"]
keywords = ["hdl", "verilog", "systemverilog", "verilator", "eda", "build-tool"]
license = "MIT"
name = "asd"
packages = [{include = "asd"}]
readme = "README.md"
repository = "https://github.com/yourusername/asd"
version = "0.1.0"

[tool.poetry.dependencies]
click = ">=8.1.0"
cocotb = ">=1.8.0"
cocotb-bus = ">=0.2.1"
jinja2 = ">=3.1.0"
pydantic = ">=2.5.0"
python = ">=3.12,<3.14"
rich = ">=13.0.0"
tomli = ">=2.0.0"
tomli-w = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.0.0"
isort = ">=5.13.0"
mypy = ">=1.0.0"
pre-commit = ">=3.5.0"
pydocstyle = ">=6.3.0"
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
ruff = ">=0.1.0"
types-toml = ">=0.10.0"

[tool.poetry.scripts]
asd = "asd.cli:main"

[tool.pydocstyle]
add_ignore = ["D100", "D104", "D105", "D107"]
convention = "google"

[tool.pytest.ini_options]
addopts = "-v"
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = [
  "B904"  # Allow raising without 'from err' in exception handlers
]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP"  # pyupgrade
]
